--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,66 +1,61 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 150px;
-    padding: 20px;
-    width: 50%;
-    height: 20%;
-    border: 6px solid lightsteelblue;
-    border-radius: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 150px;
+  padding: 20px;
+  width: 50%;
+  height: 20%;
+  border: 6px solid lightsteelblue;
+  border-radius: 60px;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-size: 13px;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  font-size: 13px;
 }
 
-
 body {
-
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.42857143;
-    color: midnightblue;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.42857143;
+  color: midnightblue;
 }
 
 .butt {
-
-    border-radius: 20px;
-    background-color: orangered;
-    width: 150px;
-    height: 40px;
-    font-size: small;
+  border-radius: 20px;
+  background-color: orangered;
+  width: 150px;
+  height: 40px;
+  font-size: small;
 }
 
 .far {
-    background-color: midnightblue;
-    color: white;
-    padding: 5px;
-    border-radius: 4px;
-    margin-left: 10px;
-    
+  background-color: midnightblue;
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+  margin-left: 10px;
 }
 
 .form-control {
-    font-size: 13px;
-    width: 200px;
-    border-radius: 4px;
+  font-size: 13px;
+  width: 200px;
+  border-radius: 4px;
 }
 
 h1 {
-    font-weight: bold;
-    color: midnightblue;
-    margin-bottom: 20px;
+  font-weight: bold;
+  color: midnightblue;
+  margin-bottom: 20px;
 }
